# telemetry-cpp

./: .gitmodules  CMakeLists.txt  README.md
backendService/: CMakeLists.txt  main.cpp
backendService/include/: AppProperties.h  MqttSubscriber.h
backendService/src/: MqttSubscriber.cpp  main.cpp
common/: CMakeLists.txt
common/include/: AMqttClient.h
common/src/: AMqttClient.cpp
protobuf/: CMakeLists.txt
protobuf/v1/: SensorData.proto
sensorSimulator/: CMakeLists.txt  main.cpp
sensorSimulator/include/: AppProperties.h  MqttPublisher.h  SafeQueue.h  Sensor.h
sensorSimulator/src/: MqttPublisher.cpp  SafeQeue.cpp  Sensor.cpp  main.cpp
